# amaru-bootstrap

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  HANDOFF-T019b.md  LICENSE  README.md  amaru-bootstrap.cabal  cabal.project  flake.nix  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  publish-bootstrap-image.yml
.specify/memory/: constitution.md
antithesis/: index.html
app/header-extractor/: Main.hs
app/ledger-state-emitter/: Main.hs
app/snapshot-emitter/: Main.hs
architecture/: index.html
assets/javascripts/: mermaid-init.js
bootstrap-producer/: index.html
constitution/: index.html
docs/: antithesis.md  architecture.md  bootstrap-producer.md  index.md  tutorial.md  what-amaru-needs.md
docs/history/: what-amaru-needs.md
history/what-amaru-needs/: index.html
lib/: AmaruBootstrap.hs  HeaderExtractor.hs  LedgerStateEmitter.hs  SnapshotEmitter.hs
nix/: amaru.nix  apps.nix  bootstrap-producer-image.nix  checks.nix  header-extractor.nix  iog-tools.nix  project.nix  shell.nix  snapshot-emitter.nix
scripts/: amaru-relay-bootstrap.sh  bootstrap-producer.sh  smoke-test.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/constitution/: index.html
site/search/: search_index.json
site/what-amaru-needs/: index.html
skills/amaru-bootstrap-guide/: SKILL.md
specs/001-snapshot-format-smoke/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-snapshot-format-smoke/checklists/: requirements.md
specs/001-snapshot-format-smoke/contracts/: smoke-test-cli.md
specs/001-snapshot-format-smoke/fixtures/: PROVENANCE.md
specs/002-snapshot-emitter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-snapshot-emitter/checklists/: requirements.md
specs/002-snapshot-emitter/contracts/: snapshot-emitter-cli.md
specs/003-amaru-bootstrap-producer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-amaru-bootstrap-producer/checklists/: requirements.md
specs/003-amaru-bootstrap-producer/contracts/: bootstrap-producer-cli.md  docker-compose-integration.md
specs/004-short-epoch-golden-states/: plan.md  spec.md  tasks.md
specs/005-amaru-run-live-test/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-amaru-run-live-test/checklists/: requirements.md
specs/005-amaru-run-live-test/contracts/: failure-classes.md
test/: HeaderExtractorSpec.hs  SnapshotEmitterSpec.hs  Spec.hs
tests/: local-amaru-chain-follow.sh  local-amaru-relay-faults.sh  test-amaru-relay-bootstrap.bats  test-bootstrap-producer-chain.bats  test-bootstrap-producer-cluster.bats  test-bootstrap-producer-concurrent.bats  test-bootstrap-producer-config.bats  test-bootstrap-producer-history.bats  test-bootstrap-producer-idempotent.bats  test-bootstrap-producer-live.bats  test-bootstrap-producer-sparse-boundaries.bats  test-config-error.bats  test-emitter-config-error.bats  test-header-extractor-cli.bats  test-smoke-integration.bats  test-smoke-pass.bats  test-tool-error.bats
tests/lib/: bootstrap-helpers.bash  fixture-helpers.bash
tmp/smoke-out/: bulk-credentials.json  report.txt
tmp/smoke-out/chain-db/immutable/: 00000.chunk  00000.primary  00000.secondary  00001.chunk  00001.primary  00001.secondary  00002.chunk  00002.primary  00002.secondary  00003.chunk  00003.primary  00003.secondary  00004.chunk  00004.primary  00004.secondary  00005.chunk  00005.primary  00005.secondary  00006.chunk  00006.primary  00006.secondary  00007.chunk  00007.primary  00007.secondary  00008.chunk  00008.primary  00008.secondary  00009.chunk  00009.primary  00009.secondary  00010.chunk  00010.primary  00010.secondary  00011.chunk  00011.primary  00011.secondary  00012.chunk  00012.primary  00012.secondary  00013.chunk  (+53 more)
tmp/smoke-out/chain-db/ledger/86354_db-analyser/: meta  state
tmp/smoke-out/chain-db/ledger/86354_db-analyser/tables/: tvar
tutorial/: index.html
