cabal-version:      3.0
name:               amaru-bootstrap
version:            0.1.0.0
synopsis:           Bootstrap data pipeline for Amaru on custom Cardano testnets
description:
  Empty marker package. The real Phase 1 deliverable is the orchestrator
  at @scripts\/smoke-test.sh@ wired to the upstream
  @snapshot-converter@ executable from
  @ouroboros-consensus-cardano@; this package exists only so
  @cabalProject'@ has a local anchor.

homepage:           https://github.com/lambdasistemi/amaru-bootstrap
bug-reports:        https://github.com/lambdasistemi/amaru-bootstrap/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Paolo Veronelli
maintainer:         paolo.veronelli@gmail.com
category:           Cardano
build-type:         Simple
extra-doc-files:    README.md
tested-with:        GHC ==9.6.7

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  exposed-modules:  AmaruBootstrap
  build-depends:
    , base                          >=4.18 && <5
    , ouroboros-consensus-cardano
