cabal-version:      3.0
name:               amaru-bootstrap
version:            0.1.0.0
synopsis:           Bootstrap data pipeline for Amaru on custom Cardano testnets
description:
  Empty marker package. The real outputs of this project are
  scripts/smoke-test.sh and the binaries provided by the pinned
  ouroboros-consensus source-repository-package
  (db-synthesizer, db-analyser) plus amaru via the flake.
homepage:           https://github.com/lambdasistemi/amaru-bootstrap
bug-reports:        https://github.com/lambdasistemi/amaru-bootstrap/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Paolo Veronelli
maintainer:         paolo.veronelli@gmail.com
category:           Cardano
build-type:         Simple
extra-doc-files:    README.md
tested-with:        GHC ==9.6.7

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  exposed-modules:
    AmaruBootstrap
    HeaderExtractor

  build-depends:
    , aeson
    , base                          >=4.18 && <5
    , bytestring
    , cardano-binary
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-diffusion
    , text

executable header-extractor
  default-language: Haskell2010
  hs-source-dirs:   app/header-extractor
  main-is:          Main.hs
  build-depends:
    , amaru-bootstrap
    , base                          >=4.18 && <5
    , bytestring
    , optparse-applicative
    , text

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

-- T005: failing hspec covering the HeaderExtractor library API.
-- Wired into nix/checks.nix as `header-extractor-spec`, which
-- synthesises a chain DB via db-synthesizer before invoking this
-- exe. Until T007-T009 replace the lib stubs, every spec here exits
-- with an `error` from the stub bodies — that's the TDD red.
test-suite header-extractor-spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    HeaderExtractorSpec
  build-depends:
    , amaru-bootstrap
    , base                  >=4.18 && <5
    , bytestring
    , directory
    , filepath
    , hspec
    , process
    , text

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
