cabal-version:      3.0
name:               amaru-bootstrap
version:            0.1.0.0
synopsis:           Bootstrap data pipeline for Amaru on custom Cardano testnets
description:
  Bootstrap producer utilities targeted at a specific cardano-node
  release. The current dependency set is pinned to cardano-node
  10.7.1 because ledger-state serialisation is release-sensitive.
homepage:           https://github.com/lambdasistemi/amaru-bootstrap
bug-reports:        https://github.com/lambdasistemi/amaru-bootstrap/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Paolo Veronelli
maintainer:         paolo.veronelli@gmail.com
category:           Cardano
build-type:         Simple
extra-doc-files:    README.md
tested-with:        GHC ==9.6.7

library
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost

  hs-source-dirs:   lib
  exposed-modules:
    AmaruBootstrap
    HeaderExtractor
    LedgerStateEmitter

  build-depends:
    , aeson
    , base                                                          >=4.18 && <5
    , base16-bytestring
    , bytestring
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-dijkstra
    , cardano-ledger-shelley
    , cardano-binary
    , cardano-slotting
    , cardano-strict-containers
    , cborg
    , containers
    , directory
    , filepath
    , microlens
    , mtl
    , ouroboros-consensus
    , ouroboros-consensus:cardano
    , ouroboros-consensus:diffusion
    , ouroboros-consensus:unstable-cardano-tools
    , ouroboros-network
    , ouroboros-network:api
    , ouroboros-network:protocols
    , resource-registry
    , serialise
    , sop-core
    , sop-extras
    , strict-sop-core
    , stm
    , text
    , transformers

executable header-extractor
  default-language: Haskell2010
  hs-source-dirs:   app/header-extractor
  main-is:          Main.hs
  build-depends:
    , aeson
    , amaru-bootstrap
    , base                  >=4.18 && <5
    , bytestring
    , optparse-applicative
    , text

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable ledger-state-emitter
  default-language: Haskell2010
  hs-source-dirs:   app/ledger-state-emitter
  main-is:          Main.hs
  build-depends:
    , amaru-bootstrap
    , base                  >=4.18 && <5
    , cardano-slotting
    , optparse-applicative

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

-- T005: hspec coverage for the HeaderExtractor library API. Wired
-- into nix/checks.nix as `header-extractor-spec`, which synthesises a
-- chain DB via db-synthesizer before invoking this exe.
test-suite header-extractor-spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    HeaderExtractorSpec
  build-depends:
    , amaru-bootstrap
    , base                  >=4.18 && <5
    , bytestring
    , directory
    , filepath
    , hspec
    , process
    , text

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
